Updated minor bugs regarding rendering Pages on Mobile Devices

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -313,8 +313,8 @@ body, .drop-zone, .head-upload, #uploading-text, .small-upload-bar {
         width: 75vw;
     }
     .progress-bar .small-upload-bar {
-        width: 70%;
-        margin-right: 5px;
+        width: 68%;
+        margin-right: 4.8px;
     }
 }
 
@@ -334,7 +334,7 @@ body, .drop-zone, .head-upload, #uploading-text, .small-upload-bar {
         font-size: 18px;
     }
     #developer-credits {
-        margin-top: 15vh;
+        margin-top: 20vh;
         margin-bottom: 3.5vh;
     }
     .image-division img {
